# pennant

./: .env.deployment.example  .env.example  CLAUDE.md  README.md  composer.json  package-lock.json  package.json
.github/workflows/: api-ci.yml  api-smoke.yml.disabled  sdk-ci.yml  sdk-publish.yml.disabled
app/Models/: ApiKey.php  AuditEvent.php  Environment.php  Flag.php  FlagConfiguration.php  Segment.php  TargetingRule.php  User.php  Workspace.php  WorkspaceMembership.php
app/Services/: AuditLogger.php  Bucketing.php  FlagEvaluator.php  PubSub.php  RuleEvaluator.php  SegmentResolver.php
config/: app.php
database/migrations/: 2026_06_07_201501_add_current_workspace_id_to_users.php  2026_06_07_201502_create_workspace_memberships_table.php  2026_06_07_201503_create_environments_table.php  2026_06_07_201504_create_api_keys_table.php  2026_06_07_201505_create_flags_table.php  2026_06_07_201506_create_flag_configurations_table.php  2026_06_07_201507_create_targeting_rules_table.php  2026_06_07_201508_create_segments_table.php  2026_06_07_201509_create_audit_events_table.php
infra/apache/: api.pennant.philiprehberger.com.conf  pennant.philiprehberger.com.conf
infra/sse-broadcaster/: README.md  (+2 more)
openapi/: spec.yaml
routes/: api.php
sdks/: _roadmap.md
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/src/pennant/: __init__.py  bucketing.py  client.py  django.py  evaluator.py  fastapi.py
sdks/python/tests/: test_corpus.py
tests/: TestCase.php
web/: .env.example  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
(+69 files in other folders)
