[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pennant"
version = "0.1.0"
description = "Pennant SDK — feature flag client with deterministic local bucketing, snapshot bootstrap, and Django + FastAPI integrations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Philip Rehberger" }]
keywords = ["feature-flags", "remote-config", "pennant"]
dependencies = ["requests>=2.32"]

[project.optional-dependencies]
test = ["pytest>=8.0"]
django = ["Django>=4.2"]
fastapi = ["fastapi>=0.110", "starlette>=0.36"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pennant" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
